--- a/artifacts/bluegreen/canary.yaml
+++ b/artifacts/bluegreen/canary.yaml
@@ -4,17 +4,16 @@ metadata:
   name: podinfo
   namespace: test
 spec:
-  # service mesh provider (default istio)
-  # can be: kubernetes, istio, appmesh, smi, nginx, gloo, supergloo
+  # service mesh provider can be: kubernetes, istio, appmesh, nginx, gloo
   # use the kubernetes provider for Blue/Green style deployments
-  provider: istio
+  provider: kubernetes
   # deployment reference
   targetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: podinfo
   # the maximum time in seconds for the canary deployment
-  # to make progress before it is rollback (default 600s)
+  # to make progress before rollback (default 600s)
   progressDeadlineSeconds: 60
   # HPA reference (optional)
   autoscalerRef:
@@ -24,65 +23,39 @@ spec:
   service:
     # container port
     port: 9898
-    # port name can be http or grpc (default http)
-    portName: http
-    # add all the other container ports
-    # when generating ClusterIP services (default false)
-    portDiscovery: false
-    # Istio gateways (optional)
-    gateways:
-    - public-gateway.istio-system.svc.cluster.local
-      # remove the mesh gateway if the public host is
-      # shared across multiple virtual services
-    - mesh
-    # Istio virtual service host names (optional)
-    hosts:
-    - app.istio.weavedx.com
-    # Istio traffic policy (optional)
-    trafficPolicy:
-      tls:
-        # use ISTIO_MUTUAL when mTLS is enabled
-        mode: DISABLE
-    # HTTP match conditions (optional)
-    match:
-      - uri:
-          prefix: /
-    # HTTP rewrite (optional)
-    rewrite:
-      uri: /
-    # HTTP timeout (optional)
-    timeout: 30s
-  # promote the canary without analysing it (default false)
-  skipAnalysis: false
+    portDiscovery: true
   canaryAnalysis:
     # schedule interval (default 60s)
-    interval: 10s
-    # max number of failed metric checks before rollback
-    threshold: 10
-    # max traffic percentage routed to canary
-    # percentage (0-100)
-    maxWeight: 50
-    # canary increment step
-    # percentage (0-100)
-    stepWeight: 5
-    # Prometheus checks
+    interval: 30s
+    # max number of failed checks before rollback
+    threshold: 2
+    # number of checks to run before rollback
+    iterations: 10
+    # Prometheus checks based on 
+    # http_request_duration_seconds histogram
     metrics:
-    - name: request-success-rate
-      # minimum req success rate (non 5xx responses)
-      # percentage (0-100)
-      threshold: 99
-      interval: 1m
-    - name: request-duration
-      # maximum req duration P99
-      # milliseconds
-      threshold: 500
-      interval: 30s
-    # external checks (optional)
+      - name: request-success-rate
+        # minimum req success rate (non 5xx responses)
+        # percentage (0-100)
+        threshold: 99
+        interval: 1m
+      - name: request-duration
+        # maximum req duration P99
+        # milliseconds
+        threshold: 500
+        interval: 30s
+    # acceptance/load testing hooks
     webhooks:
+      - name: smoke-test
+        type: pre-rollout
+        url: http://flagger-loadtester.test/
+        timeout: 15s
+        metadata:
+          type: bash
+          cmd: "curl -sd 'anon' http://podinfo-canary.test:9898/token | grep token"
       - name: load-test
         url: http://flagger-loadtester.test/
         timeout: 5s
         metadata:
           type: cmd
           cmd: "hey -z 1m -q 10 -c 2 http://podinfo-canary.test:9898/"
-          logCmdOutput: "true"
