ignore load-test

--- a/artifacts/bluegreen/canary.yaml
+++ b/artifacts/bluegreen/canary.yaml
@@ -53,9 +53,9 @@ spec:
         metadata:
           type: bash
           cmd: "curl -sd 'anon' http://podinfo-canary.test:9898/token | grep token"
-      - name: load-test
-        url: http://flagger-loadtester.test/
-        timeout: 5s
-        metadata:
-          type: cmd
-          cmd: "hey -z 1m -q 10 -c 2 http://podinfo-canary.test:9898/"
+      # - name: load-test
+      #   url: http://flagger-loadtester.test/
+      #   timeout: 5s
+      #   metadata:
+      #     type: cmd
+      #     cmd: "hey -z 1m -q 10 -c 2 http://podinfo-canary.test:9898/"
