--- a/artifacts/bluegreen/canary.yaml
+++ b/artifacts/bluegreen/canary.yaml
@@ -59,3 +59,9 @@ spec:
       #   metadata:
       #     type: cmd
       #     cmd: "hey -z 1m -q 10 -c 2 http://podinfo-canary.test:9898/"
+
+      - name: load-test
+        type: rollout
+        url: http://flagger-loadtester.test/
+        metadata:
+          cmd: "hey -z 2m -q 10 -c 2 http://podinfo:9898/"
